--- a/css3/global.css
+++ b/css3/global.css
@@ -8,10 +8,14 @@
     -moz-border-radius: 4px;
     border-radius: 4px;
     display: inline;
-    padding: 6px;
+    padding: 4px;
 }
 
 .css-element {
     background-color: darkseagreen;
     padding: 15px;
+}
+
+.code-example {
+    margin: 30px 0;
 }
