--- a/css3/position/styles.css
+++ b/css3/position/styles.css
@@ -1,6 +1,11 @@
 .position-static .css-element {
     position: static;
     /*top, right, bottom and right properties don't affect static*/
-    top: 15px;
-    left: 15px;
+    top: 20px;
+    left: 20px;
+}
+
+.position-relative .css-element {
+    position: relative;
+    left: 40px;
 }
