--- a/css3/position/styles.css
+++ b/css3/position/styles.css
@@ -9,3 +9,10 @@
     position: relative;
     left: 40px;
 }
+
+.position-fixed .css-element {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 300px;
+}
