--- a/css3/display/styles.css
+++ b/css3/display/styles.css
@@ -2,6 +2,8 @@
     display: block;
 }
 
-.display-block .css-element {
+.display-block  .css-container-element {
     display: block;
+    width: 50%;
+
 }
