--- a/css3/global.css
+++ b/css3/global.css
@@ -17,6 +17,11 @@
     padding: 15px;
 }
 
+.css-container-element {
+    background-color: antiquewhite;
+    padding: 20px;
+}
+
 .code-example {
     margin: 30px 0;
 }
@@ -33,4 +38,8 @@
     color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
+}
+
+.half-width {
+    width: 50%;
 }
