--- a/css3/position/styles.css
+++ b/css3/position/styles.css
@@ -11,7 +11,7 @@
 }
 
 .position-fixed .css-element {
-    background-color: rgba(143,188,143,0.8);
+    background-color: rgba(207, 228, 207, 0.8);
     position: fixed;
     bottom: 0;
     right: 0;
