Adds hover state

--- a/css3/display/styles.css
+++ b/css3/display/styles.css
@@ -20,3 +20,11 @@
 .display-inline-block .css-container-element {
     white-space: nowrap;
 }
+
+.display-none .hover-toggle-element {
+    display: none;
+}
+
+.display-none .hover-toggle:hover .hover-toggle-element{
+    display: block;
+}
