--- a/css3/z-index/styles.css
+++ b/css3/z-index/styles.css
@@ -1,27 +1,46 @@
-.z-index-auto .css-container-element {
+.z-index .css-container-element {
     position: relative;
     height: 200px;
 }
 
-.z-index-auto .css-element {
+.z-index .css-element {
     height: 50px;
     background-color: rgba(207, 228, 207, 0.8);
 }
 
-.z-index-auto .css-element.absolute-1 {
+.z-index .css-element.absolute-1 {
     position: absolute;
     bottom: 20px;
     left: 20px;
+    background-color: rgba(255, 0, 0, 0.6);
 }
 
-.z-index-auto .css-element.absolute-2 {
+.z-index .css-element.absolute-2 {
     position: absolute;
     bottom: 50px;
     left: 50px;
+    background-color: rgba(0, 255, 0, 0.6);
 }
 
-.z-index-auto .css-element.absolute-3 {
+.z-index .css-element.absolute-3 {
     position: absolute;
     bottom: 80px;
     left: 80px;
+    background-color: rgba(0, 0, 255, 0.6);
+    color: white;
+}
+.z-index .css-element.absolute-3 .css-property {
+    color: black;
+}
+
+.z-index-integer .absolute-1 {
+    z-index: 3;
+}
+
+.z-index-integer .absolute-2 {
+    z-index: 2;
+}
+
+.z-index-integer .absolute-3 {
+    z-index: 1;
 }
