Z-index best practices code example

--- a/css3/z-index/styles.css
+++ b/css3/z-index/styles.css
@@ -44,3 +44,15 @@
 .z-index-integer .absolute-3 {
     z-index: 1;
 }
+
+.best-practices .sidenav {
+    z-index: 100;
+}
+
+.best-practices .popover {
+    z-index: 200;
+}
+
+.best-practices .modal {
+    z-index: 300;
+}
