--- a/css3/global.css
+++ b/css3/global.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Helvetica;
+    font-family: Helvetica, sans-serif;
 }
 
 .css-property {
@@ -9,16 +9,18 @@
     border-radius: 4px;
     display: inline;
     padding: 4px;
-    font-family: Consolas;
+    font-family: Consolas, monospace;
 }
 
 .css-element {
-    background-color: rgb(207, 228, 207);
+    background-color: #cfe4cf;
+    border: 1px solid #b1d1b1;
     padding: 15px;
 }
 
 .css-container-element {
-    background-color: antiquewhite;
+    background-color: #faebd7;
+    border: 1px solid #e1d1c1;
     padding: 20px;
 }
 
@@ -27,18 +29,17 @@
 }
 
 .code {
-    font-family: Consolas;
     display: inline;
+    font-family: Consolas, monospace;
 }
 
 .alert {
     padding: 15px;
     margin-bottom: 20px;
-    border: 1px solid transparent;
+    border: 1px solid #ebccd1;
     border-radius: 4px;
     color: #a94442;
     background-color: #f2dede;
-    border-color: #ebccd1;
 }
 
 .half-width {
