Improves colors for color blind people

--- a/css3/global.css
+++ b/css3/global.css
@@ -27,8 +27,8 @@ h3.css-property {
 }
 
 .css-container-element {
-    background-color: #faebd7;
-    border: 1px solid #e1d1c1;
+    background-color: #8ba6fa;
+    border: 1px solid #5366e1;
     padding: 20px;
 }
 
