--- a/css3/display/styles.css
+++ b/css3/display/styles.css
@@ -21,6 +21,14 @@
     white-space: nowrap;
 }
 
+.display-none .toggle-element {
+    font-size: 20px;
+}
+
+.display-none .css-toggle-element {
+    display: none;
+}
+
 .display-none .hover-toggle-element {
     display: none;
 }
