Forms code example

--- a/css3/basic-html-elements/styles.css
+++ b/css3/basic-html-elements/styles.css
@@ -9,3 +9,15 @@
 .align-right {
     text-align: right;
 }
+
+.forms form {
+    margin-top: 20px;
+}
+
+.forms input, .forms select {
+    display: block;
+}
+
+.forms input[type="radio"] {
+    display: inline-block;
+}
