--- a/css3/basic-css-selectors/styles.css
+++ b/css3/basic-css-selectors/styles.css
@@ -1,4 +1,4 @@
-ul {
+section > ul {
     padding: 0;
     list-style: none;
 }
@@ -42,4 +42,10 @@ a {
 
 .colors .blue {
     background-color: blue;
+}
+
+.title-adjacent + p {
+    background-color: red;
+    color: white;
+    padding: 10px;
 }
