General sibling code example

--- a/css3/basic-css-selectors/styles.css
+++ b/css3/basic-css-selectors/styles.css
@@ -49,3 +49,9 @@ a {
     color: white;
     padding: 10px;
 }
+
+.title-general ~ p {
+    background-color: red;
+    color: white;
+    padding: 10px;
+}
