--- a/css3/basic-css-selectors/styles.css
+++ b/css3/basic-css-selectors/styles.css
@@ -3,7 +3,7 @@ section > ul {
     list-style: none;
 }
 
-li {
+section > ul > li {
     margin-bottom: 20px;
 }
 
@@ -54,4 +54,13 @@ a {
     background-color: red;
     color: white;
     padding: 10px;
+}
+
+.list-children li {
+    background-color: red;
+    color: white;
+}
+
+.list-children > li {
+    background-color: blue;
 }
