Hover code example

--- a/css3/basic-css-selectors/styles.css
+++ b/css3/basic-css-selectors/styles.css
@@ -105,3 +105,12 @@ a {
     border-width: 15px 15px 0 15px;
     border-color: #007bff transparent transparent transparent;
 }
+
+.hover-over-me {
+    border-radius: 4px;
+    padding: 10px;
+}
+
+.hover-over-me:hover {
+    background-color: red;
+}
