--- a/css3/basic-css-selectors/styles.css
+++ b/css3/basic-css-selectors/styles.css
@@ -114,3 +114,25 @@ a {
 .hover-over-me:hover {
     background-color: red;
 }
+
+.button-group .button {
+    display: inline;
+    background-color: #007bff;
+    border: 1px solid;
+    padding: 10px;
+    width: 40px;
+}
+
+.button-group .button:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.button-group .button:last-child  {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.button-group .button:first-child, .button-group .button:last-child {
+    background-color: red;
+}
