Toggle color media queries

--- a/code-examples/media-queries/styles.css
+++ b/code-examples/media-queries/styles.css
@@ -1,23 +1,45 @@
-.css-container-element, .css-element {
+.toggle-color .css-element {
+    color: white;
+}
+
+@media (max-width: 460px) {
+    .toggle-color .css-element {
+        background-color: red;
+    }
+}
+
+@media (min-width: 461px) and (max-width: 768px) {
+    .toggle-color  .css-element {
+        background-color: green;
+    }
+}
+
+@media (min-width: 769px) {
+    .toggle-color .css-element {
+        background-color: blue;
+    }
+}
+
+.grid-system .css-container-element, .grid-system .css-element {
     border: 0;
     margin: 0;
     padding: 20px 0;
 }
 
-.css-element .content {
+.grid-system .css-element .content {
     padding: 25px;
     background: white;
     border: 1px solid;
     text-align: center;
 }
 
-.desktop-first .css-container-element {
+.grid-system.desktop-first .css-container-element {
     /* HACK: necessary to remove white-spaces */
     font-size: 0;
 }
 
 /* In this case our default is desktop viewport */
-.desktop-first .css-element {
+.grid-system.desktop-first .css-element {
     display: inline-block;
     font-size: initial;
     vertical-align: top;
@@ -26,26 +48,26 @@
 
 /* Mobile breakpoint */
 @media (max-width: 460px) {
-    .desktop-first .css-element {
+    .grid-system.desktop-first .css-element {
         width: 100%;
     }
 }
 
 /* Tablet breakpoint */
 @media (min-width: 461px) and (max-width: 768px) {
-    .css-element {
+    .grid-system .css-element {
         width: 50%;
     }
 }
 
 /* Tablet and Desktop breakpoints */
 @media (min-width: 461px) {
-    .mobile-first .css-container-element {
+    .grid-system.mobile-first .css-container-element {
         /* HACK: necessary to remove white-spaces */
         font-size: 0;
     }
 
-    .mobile-first .css-element {
+    .grid-system.mobile-first .css-element {
         display: inline-block;
         font-size: initial;
         width: 50%;
@@ -54,7 +76,7 @@
 
 /* Desktop breakpoint */
 @media (min-width: 769px) {
-    .mobile-first .css-element {
+    .grid-system.mobile-first .css-element {
         width: 25%;
     }
 }
