--- a/code-examples/media-queries/styles.css
+++ b/code-examples/media-queries/styles.css
@@ -37,8 +37,8 @@
 }
 
 .grid-system .css-container-element, .grid-system .css-element {
-    border: 0;
-    margin: 0;
+    border-right: 0;
+    border-left: 0;
     padding: 20px 0;
 }
 
