--- a/live-coding/css/styles.css
+++ b/live-coding/css/styles.css
@@ -6,6 +6,10 @@
     width: 100%;
 }
 
+.z-navbar {
+    z-index: 1;
+}
+
 .navbar .logo {
     display: inline;
     font-family: Grand Hotel, sans-serif;
@@ -99,5 +103,23 @@
 }
 
 .header {
+    background-image: url('../img/header.jpg');
+    background-position: center;
+    background-size: cover;
+    position: relative;
     width: 100%;
+    height: 600px;
+}
+
+.header::before {
+    content: '';
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: all 1s ease-in-out;
+}
+
+.header:hover::before {
+    background: rgba(255, 0, 0, 0.5);
 }
