--- a/exercises/starter/styles.css
+++ b/exercises/starter/styles.css
@@ -1,5 +1,10 @@
 /* Escribir las soluciones aquí */
 
+/* Convertir el cuadrado rojo en un círculo y posicionar en el centro del cuadrado amarillo */
 .exercise-1 {}
 
+/* Posicionar el cuadrado rojo en el centro del rectángulo amarillo */
 .exercise-2 {}
+
+/* Mostrar los cuadrados en la misma línea, uno al lado del otro */
+.exercise-3 {}
