--- a/exercises/starter/styles.css
+++ b/exercises/starter/styles.css
@@ -8,3 +8,6 @@
 
 /* Mostrar los cuadrados en la misma línea, uno al lado del otro */
 .exercise-3 {}
+
+/* Centrar el texto horizontal y verticalmente dentro del cuadrado amarillo */
+.exercise-4 {}
