--- a/exercises/starter/styles.css
+++ b/exercises/starter/styles.css
@@ -1,5 +1,8 @@
 /* Escribir las soluciones aquí */
 
+/* Configurar padding, border y margin del cuadrado verde */
+.exercise-0 {}
+
 /* Convertir el cuadrado rojo en un círculo y posicionar en el centro del cuadrado amarillo */
 .exercise-1 {}
 
