--- a/live-coding/css/header.css
+++ b/live-coding/css/header.css
@@ -9,7 +9,7 @@
 
 .header::before {
     content: '';
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(100,96,102,0.5);
     position: absolute;
     width: 100%;
     height: 100%;
