Adds third session review and fourth session agenda

--- a/exercises/global.css
+++ b/exercises/global.css
@@ -8,6 +8,11 @@ body {
     font-size: large;
 }
 
+header h1 {
+    font-size: 3em;
+    text-align: center;
+}
+
 .note {
     font-style: italic;
 }
