Favors class toggle for visibility over inline styling

--- a/live-coding/css/navbar.css
+++ b/live-coding/css/navbar.css
@@ -88,6 +88,10 @@
         position: initial;
     }
 
+    .navbar .menu.visible {
+        display: block;
+    }
+
     .navbar .menu li {
         display: block;
         text-align: center;
