--- a/live-coding/css/global.css
+++ b/live-coding/css/global.css
@@ -11,3 +11,35 @@
 .z-navbar {
     z-index: 1;
 }
+
+.row {
+	/* Hack to hide white spaces between inline-block elements */
+	font-size: 0;
+	margin: 3rem;
+}
+
+.column-25 {
+	display: inline-block;
+	font-size: initial;
+	width: 25%;
+}
+
+@media (max-width: 1200px) {
+	.row {
+		margin: 2rem;
+	}
+
+	.column-25 {
+		width: 50%;
+	}
+}
+
+@media (max-width: 767px) {
+	.row {
+		margin: 1rem;
+	}
+
+	.column-25 {
+		width: 100%;
+	}
+}
