--- a/live-coding/css/thumbnail.css
+++ b/live-coding/css/thumbnail.css
@@ -1,5 +1,5 @@
 .thumbnail {
-	width: 300px;
+	padding: 0 1em;
 }
 
 .thumbnail .image-container {
@@ -7,22 +7,23 @@
 }
 
 .thumbnail img {
+	display: block;
 	width: 100%;
 }
 
 .thumbnail .likes {
 	background: black;
 	color: white;
-	padding: 15px;
+	padding: 1em;
 	position: absolute;
-	top: 10px;
-	left: 10px;
+	top: 1em;
+	left: 1em;
 }
 
 .thumbnail .likes::before {
 	content: '\2665';
-	font-size: 12px;
-	margin-right: 5px;
+	font-size: .7em;
+	margin-right: .4em;
 }
 
 .thumbnail .category {
@@ -30,12 +31,12 @@
 	font-family: Grand Hotel, sans-serif;
 	font-size: 2em;
 	position: absolute;
-	bottom: 10px;
-	right: 10px;
+	bottom: 1em;
+	right: 1em;
 }
 
 .thumbnail .name {
 	font-size: 1.2em;
-	margin: 10px 0;
+	margin: 1em 0;
 	text-align: center;
 }
